<resources>
    <string name="app_name">Ichome</string>
    <string name="action_settings">Settings</string>
    <string name="add">添加</string>
    <string name="change">修改</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="hint">提示</string>
    <string name="save">保存</string>
    <string name="about">关于</string>
    <string name="me">我</string>
    <string name="submitsuccess">提交成功</string>
    <string name="save_success">保存成功</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="dialog_title">温馨提示</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="title_activity_yjlist">YJListActivity</string>
    <string name="title_activity_msg_not">MsgNotActivity</string>
    <string name="title_activity_wifi_set">WifiSetActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">手机号码格式错误</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="attendance_search_phone">手机号</string>
    <string name="attendance_search_name">姓名</string>
    <string name="attendance_group">团队名单</string>
    <string name="attendance_add_confirm">确认添加</string>
    <string name="attendance_add_contact">手机联系人</string>
    <string name="attendance_add_contact_describe">添加或邀请通讯录中的朋友</string>
    <string name="attendance_add_member">添加同事</string>
    <string name="attendance_add_name_error">添加姓名不能为空</string>
    <string name="attendance_add_phone_error">添加手机号不能为空</string>
    <string name="attendance_history">出勤详情</string>
    <string name="attendance_history_statistics">本月情况统计</string>
    <string name="attendance_history_attend">考勤天数</string>
    <string name="attendance_history_absent">缺勤天数</string>
    <string name="attendance_setting_name">公司名称</string>
    <string name="attendance_setting_id">考勤ID</string>
    <string name="attendance_setting_default">缺省工作时间设置</string>
    <string name="attendance_member_name">考勤人:</string>
    <string name="attendance_member_id">考勤ID:</string>
    <string name="attendance_member_phone">手机号:</string>
    <string name="attendance_member_worktime">考勤时间:</string>
    <string name="attendance_status_attend">正常</string>
    <string name="attendance_status_late">迟到</string>
    <string name="attendance_status_absent">缺勤</string>
    <string name="attendance_member_week">工作日设置</string>
    <string name="attendance_member_day">工作时长设置</string>
    <string name="home_monday">一</string>
    <string name="home_tuesday">二</string>
    <string name="home_wednesday">三</string>
    <string name="home_thursday">四</string>
    <string name="home_friday">五</string>
    <string name="home_saturday">六</string>
    <string name="home_sunday">日</string>
    <string name="hum_name">加湿器</string>
    <string name="hum_state">状态</string>
    <string name="hum_state_empty">空闲</string>
    <string name="hum_state_work">加湿中</string>
    <string name="hum_state_anion">负离子</string>
    <string name="hum_state_stay">保湿中</string>
    <string name="hum_state_nowater">缺水</string>
    <string name="hum_state_nowaterhint">加湿器缺水</string>
    <string name="hum_mode_dry">干爽</string>
    <string name="hum_mode_cozy">舒适</string>
    <string name="hum_mode_wet">水润</string>
    <string name="hum_getstate_error">加湿器状态错误</string>
    <string name="hum_getstate_connerror">获取加湿器状态失败</string>
    <string name="hum_timing_name">预约</string>
    <string name="hum_custom_name">自定义模式</string>
    <string name="hum_custom_city">城市</string>
    <string name="hum_custom_citytemp">环境温度</string>
    <string name="hum_custom_citywet">环境湿度</string>
    <string name="hum_custom_wetset">设定湿度</string>
    <string name="hum_custom_notificatingset">智能加湿</string>
    <string name="hum_custom_notificatingset_nearstart">用户出现自动开启</string>
    <string name="hum_custom_notificatingset_farstop">用户离开自动关闭</string>
    <string name="hum_custom_notificatingset_dryremind">湿度低于40%提醒</string>
    <string name="hum_custom_notificatingset_nowaterremind">缺水提醒</string>
    <string name="hum_custom_notificatingset_startandstopremind">开启关闭提醒</string>
    <string name="feedback_main">意见反馈</string>
    <string name="feedback_detail">详情</string>
    <string name="customer_service">客服</string>
    <string name="add_device">添加设备</string>
    <string name="device_detail">设备详情</string>
    <string name="my_kettle">我的水壶</string>
    <string name="connecting">connecting</string>
    <string name="history_record">历史纪录</string>
    <string name="delete_device">删除商品</string>
    <string name="add_device_success">绑定商品成功</string>
    <string name="delete_device_success">删除商品成功</string>
    <string name="add_device_failed">绑定商品失败</string>
    <string name="update_nonecessary">当前已是最新版本，不需要更新</string>
    <string name="my_device">我的设备</string>
    <string name="edit">编辑</string>
    <string name="finished">完成</string>
    <string name="more_product">更多产品</string>
    <string name="share">分享</string>
    <string name="message_hint">消息提示</string>
    <string name="setting">设置</string>
    <string name="wifi_setting">WIFI设置</string>
    <string name="weekly_repeat">选择周期</string>
    <string name="heating">加热中</string>
    <string name="purify">净化中</string>
    <string name="insulation">保温中</string>
    <string name="cooldown">冷却中</string>
    <string name="alarm">定时</string>
    <string name="alarm_set_success">预约成功</string>
    <string name="alarm_delete_success">删除预约成功</string>
    <string name="heating_cancel_failed">取消加热失败，你也许要检查水壶状态，并拔下电源</string>
    <string name="alarm_delete_confirm">是否取消当前预约</string>
    <string name="alarm_set_confirm">是否发送预约</string>
    <string name="alarm_set_failed">发送预约失败</string>
    <string name="alarm_edit">编辑预约</string>
    <string name="alarm_edit_confirm">是否修改该预约</string>
    <string name="custom">自定义</string>
    <string name="purify_length">净化时间</string>
    <string name="minite">分钟</string>
    <string name="caculate_time">预计时间</string>
    <string name="insulation_length">保温时间</string>
    <string name="add_success">添加成功</string>
    <string name="user_help">用户帮助</string>
    <string name="website">产品网站</string>
    <string name="aftersale_service">售后服务</string>
    <string name="termsofuse">使用条款</string>
    <string name="copyright">版权所有：广州星奕科技有限公司</string>
    <string name="add_new_device">添加新设备</string>
    <string name="add_old_device">添加已有设备</string>
    <string name="add_hint">请确认电器已接上电源，并根据说明书指示常按wifi控制按键，直至wifi指示灯进入快速闪烁状态，再进行搜索。</string>
    <string name="add_one_device">已收到一台设备</string>
    <string name="wifi_account">WIFI账号</string>
    <string name="wifi_password">WIFI密码</string>
    <string name="wifi_password_hint">请输入wifi密码</string>
    <string name="search">搜索</string>
    <string name="alarm_set_hint">请选择预约时间</string>
    <string name="alarm_set_mode_hint">请选择预约模式</string>
    <string name="never">永不</string>
    <string name="label">标签</string>
    <string name="boil">煮沸</string>
    <string name="start_notificate">开始提醒</string>
    <string name="stop_notificate">结束提醒</string>
    <string name="short_of_water_remaind">缺水提醒</string>
    <string name="milk">牛奶</string>
    <string name="boil_then_cooldown">煮沸冷却到设定温度</string>
    <string name="lastmonth_history_record">上月使用情况</string>
    <string name="daily_use_time">平均每天使用次数</string>
    <string name="daily_use_volume">平均每天烧水容量</string>
    <string name="most_use_temp">最多使用设置温度</string>
    <string name="total_power">总用电量</string>
    <string name="time">时间</string>
    <string name="volume">水量</string>
    <string name="temp">温度</string>
    <string name="power">耗电</string>
    <string name="operation">操作</string>
    <string name="setting_temp">目标温度</string>
    <string name="mode">模式</string>
    <string name="device_id">设备编号</string>
    <string name="device_name">设备名称</string>
    <string name="label_hint">请输入标签</string>
    <string name="kettle">水壶</string>
    <string name="hum">加湿器</string>
    <string name="message_set">消息设置</string>
    <string name="notification_set">通知设置</string>
    <string name="feedback_hint">请输入意见反馈</string>
    <string name="submit">提交</string>
    <string name="manual">手动</string>
    <string name="daily_hum_hours">平均每天加湿时长</string>
    <string name="five_minite">五分钟</string>
    <string name="most_use_wet">使用最多的湿度设置</string>
    <string name="most_use_operation">使用最多的操作</string>
    <string name="time_length">时长</string>
    <string name="hum_set_wet">设置湿度</string>
    <string name="delete">删除</string>
    <string name="open">开</string>
    <string name="select">请选择：</string>
    <string name="feedback">意见反馈</string>
    <string name="version_update">版本更新</string>
    <string name="type">型号</string>
    <string name="no_data">没有找到设备</string>
    <string name="moment">朋友圈</string>
    <string name="date_time_hint">请选择日期与时间</string>
    <string name="switch_name">开关</string>
    <string name="humidifier">加湿器</string>
    <string name="attendance">考勤机</string>
    <string name="light">智能灯</string>
    <string name="device_offline">设备不在线</string>
    <string name="attendance_add_member_success">已发送申请！对方接受邀请后将成功添加</string>
    <string name="attendance_add_member_error">发送邀请失败</string>
    <string name="from">从</string>
    <string name="to">至</string>
    <string name="clock">选择时间</string>
    <string name="group_name">公司名称：</string>
    <string name="group_id">考勤机ID号：</string>
    <string name="attendance_group_setting">团队设置</string>
    <string name="light_list">智能灯列表</string>
    <string name="add_section">添加工作区间</string>
    <string name="del_section">删除工作区间</string>
    <string name="stop">停止</string>
    <string name="everyday">每天</string>
    <string name="minute">分钟</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="title_activity_register">Register</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="toregister">No account? Click here to</string>
    <string name="remember_phone">Auto Phone</string>
    <string name="auto_login">Auto Login</string>
    <string name="prompt_user">User Name</string>
    <string name="prompt_password_confirm">Password Confirm</string>
    <string name="resent">Resent Message</string>
    <string name="prompt_phone">Phone</string>
    <string name="error_invalid_message">Message length is not correct</string>
    <string name="error_invalid_password_confirm">Two password must be same</string>
    <string name="select_head">选择头像</string>
    <string name="localphoto">本地相册</string>
    <string name="camarephoto">拍照</string>
    <string name="mosquito">我的灭蚊器</string>
</resources>