<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/timetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastmonth_history_record"
                android:textColor="@color/darkgray"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/daily_hum_hours"
                android:textColor="@color/gray"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/pjtimelal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five_minite"
                android:textColor="@color/myblue"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="@string/most_use_wet"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/zdsdlal"
                android:text="10℃"
                android:textColor="@color/myblue"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/zdczlal"
                android:text="@string/most_use_operation"
                android:textColor="@color/gray"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="App"
                android:textColor="@color/myblue"
                android:textSize="22dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/lightgray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/myblue"
                android:textSize="20dp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time_length"
                android:textColor="@color/myblue"
                android:textSize="20dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hum_set_wet"
                android:textColor="@color/myblue"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/operation"
                android:textColor="@color/myblue"
                android:textSize="20dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray" />
    </LinearLayout>

</RelativeLayout>